infrastructure/poptart/infra-stage3/cilium/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  annotations:
    external-dns.alpha.kubernetes.io/target: poptart-gateway.gangsterkitties.com
spec:
  gatewayClassName: cilium
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ''
            kind: Secret
            name: wildcard
            namespace: cert-manager
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.0.102.253
